# AWS-IAM-Permissions-Scanner

./: .gitignore  README.md  app.py  aws_perms.py  pyproject.toml  requirements.txt  scanner.py
docs/: example-report.html
iam_exposure/: __init__.py  cli.py  collector.py  graph.py  policy.py  report.py  rules.py
iam_exposure/data/: ruleset.json
templates/: index.html
tests/: test_report.py  test_rules.py
