[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-exposure-review"
version = "0.1.0"
description = "Local-first AWS IAM exposure and privilege escalation review tool."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0"
]

[project.scripts]
iam-exposure = "iam_exposure.cli:main"

[tool.setuptools.package-data]
iam_exposure = ["data/*.json"]
